--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,5 +2,33 @@
     box-sizing: border-box;
 }
 body {
-    font-family: sans-serif;
+    font: normal 16px Arial, helvetica, 
+        sans-serif;
+    background-color:#f4f4f4;
+    color: #555555;
+    line-height: 1.6em;
+    margin: 0;
+
+}
+
+.game{
+    border:1px #ccc solid;
+    padding:10px;
+    border-radius:15px;
+}
+.container{
+    width: 80%;
+    margin: auto;
+}
+
+h1{
+    font-family:Tahoma;
+    font-weight: 800;
+    font-style:oblique;
+    text-decoration: underline;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    word-spacing: 1em;
+    color:midnightblue;
+
 }
