deleted unneeded class tags and added a font color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,4 +44,6 @@ h1 {
 #scoreboard{
     font-size: larger;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color:rgb(135, 243, 135);
 }
+
